--- a/PInvoke/CoreAudio/Vanara.PInvoke.CoreAudio.csproj
+++ b/PInvoke/CoreAudio/Vanara.PInvoke.CoreAudio.csproj
@@ -13,7 +13,11 @@
     <PackageReleaseNotes />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="MmReg.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Multimedia\Vanara.PInvoke.Multimedia.csproj" />
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
