--- a/PInvoke/PhotoAcquire/Vanara.PInvoke.PhotoAcquire.csproj
+++ b/PInvoke/PhotoAcquire/Vanara.PInvoke.PhotoAcquire.csproj
@@ -11,11 +11,8 @@
     <PackageTags>pinvoke;vanara;net-extensions;interop;photoacq;photo acquisition;windows</PackageTags>
     <PackageReleaseNotes>Currently implements:
 
-Classes
-PhotoAcquire, PhotoAcquireDeviceSelectionDialog, PhotoAcquireOptionsDialog, PhotoAcquisition, PhotoProgressDialog
-
-Enumerations
-DEVICE_SELECTION_DEVICE_TYPE, DSF, ERROR_ADVISE_MESSAGE_TYPE, ERROR_ADVISE_RESULT, PAPS, PHOTOACQ, PROGRESS_DIALOG_CHECKBOX_ID, PROGRESS_DIALOG_IMAGE_TYPE, USER_INPUT_STRING_TYPE
+Interfaces
+IPhotoAcquire IPhotoAcquireDeviceSelectionDialog IPhotoAcquireItem IPhotoAcquireOptionsDialog IPhotoAcquirePlugin IPhotoAcquireProgressCB IPhotoAcquireSettings IPhotoAcquireSource IPhotoProgressActionCB IPhotoProgressDialog IUserInputString
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
