Check point - Lots of additions to windows messages

--- a/Windows.Forms/Vanara.Windows.Forms.csproj
+++ b/Windows.Forms/Vanara.Windows.Forms.csproj
@@ -48,6 +48,7 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <EmbeddedResource Include="Extenders\GlassExtenderProvider.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="Controls\SysLink.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
