Lots of changes for rich edit

--- a/PInvoke/MsftEdit/Vanara.PInvoke.MsftEdit.csproj
+++ b/PInvoke/MsftEdit/Vanara.PInvoke.MsftEdit.csproj
@@ -15,8 +15,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Imm32\Vanara.PInvoke.Imm32.csproj" />
-    <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
+    <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+    <ProjectReference Include="..\UIAutomation\Vanara.PInvoke.UIAutomation.csproj" />
     <ProjectReference Include="..\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
 </Project>
