--- a/UnitTests/PInvoke/Multimedia/Multimedia.csproj
+++ b/UnitTests/PInvoke/Multimedia/Multimedia.csproj
@@ -4,6 +4,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Multimedia\Vanara.PInvoke.Multimedia.csproj" />
   </ItemGroup>
 </Project>
