Multiple projects touched to get nullability added to Vanara.Windows.Forms and assoc unit tests

--- a/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
+++ b/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
@@ -9,6 +9,8 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFramework>$(TargetFramework)-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <StartupObject>Microsoft.WindowsAPICodePack.Samples.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="ShellViewTestForm.cs" />
