--- a/UnitTests/PInvoke/DwmApi/DwmApi.csproj
+++ b/UnitTests/PInvoke/DwmApi/DwmApi.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>UnitTest.PInvoke.DwmApi</AssemblyName>
+    <TargetFramework>$(TargetFramework)-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Windows.Forms" />
