Final build, nullability and xml doc fixes

--- a/UnitTests/CoreConsoleApp/CoreConsoleApp.csproj
+++ b/UnitTests/CoreConsoleApp/CoreConsoleApp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <StartupObject>CoreConsoleApp.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
