--- a/UnitTests/Windows.Forms.App/Windows.Forms.App.csproj
+++ b/UnitTests/Windows.Forms.App/Windows.Forms.App.csproj
@@ -8,13 +8,13 @@
     <UseWindowsForms>true</UseWindowsForms>
     <StartupObject>Windows.Forms.App.Program</StartupObject>
   </PropertyGroup>
-  <ItemGroup>
+  <!--<ItemGroup>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
+  </ItemGroup>-->
   <ItemGroup>
     <Compile Update="Form1.cs" />
     <Compile Update="Form1.Designer.cs">
