--- a/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
+++ b/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
@@ -24,7 +24,7 @@
     <None Include="ShellViewTestForm.Designer.cs" />
     <None Include="ShellViewTestForm.resx" />
   </ItemGroup>
-  <ItemGroup>
+  <!--<ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -32,7 +32,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
-  </ItemGroup>
+  </ItemGroup>-->
   <ItemGroup>
     <Compile Update="ExplorerBrowserTestForm.cs">
       <SubType>Form</SubType>
