--- a/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
+++ b/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
@@ -13,7 +13,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-IsVolumeSnapshotted IsVolumeSnapshottedInternal ShouldBlockRevert ShouldBlockRevertInternal
+IsVolumeSnapshotted ShouldBlockRevert
 
 Structures
 VDS_INTERCONNECT VDS_LUN_INFORMATION VDS_STORAGE_DEVICE_ID_DESCRIPTOR VDS_STORAGE_IDENTIFIER VssDifferencedFile VssDirectedTarget VssPartialFile VssRestoreSubcomponent VssWriterStatus VSS_COMPONENTINFO VSS_DIFF_AREA_PROP VSS_DIFF_VOLUME_PROP VSS_MGMT_OBJECT_PROP VSS_MGMT_OBJECT_UNION VSS_OBJECT_PROP VSS_OBJECT_UNION VSS_PROVIDER_PROP VSS_SNAPSHOT_PROP VSS_VOLUME_PROP VSS_VOLUME_PROTECTION_INFO
