Added SelfContained tag to project for Net8.0

--- a/UnitTests/PInvoke/FhSvcCtl/FhSvcCtl.csproj
+++ b/UnitTests/PInvoke/FhSvcCtl/FhSvcCtl.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>UnitTest.PInvoke.FhSvcCtl</AssemblyName>
-    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+    <RuntimeIdentifier Condition=" !$(TargetFramework.StartsWith('net8')) ">win10-x64</RuntimeIdentifier>
+    <SelfContained Condition=" $(TargetFramework.StartsWith('net8')) ">true</SelfContained>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\FhSvcCtl\Vanara.PInvoke.FhSvcCtl.csproj" />
