--- a/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj.filters
+++ b/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj.filters
@@ -74,5 +74,7 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Vanara.PInvoke.VssApi.nuspec" />
+    <None Include="packages.config" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
