--- a/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
+++ b/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
@@ -6,10 +6,15 @@
   <PropertyGroup>
     <AssemblyName>Vanara.PInvoke.VssApiMgd</AssemblyName>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <IsPackable>false</IsPackable>
+    <!--<TargetFrameworks>net6.0</TargetFrameworks>-->
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
+  <Target Name="WipeObj" BeforeTargets="Clean;CoreClean">
+    <!-- obj -->
+    <RemoveDir Directories="$(ProjectDir)$(BaseIntermediateOutputPath)" ContinueOnError="true" />
+  </Target>
 </Project>
