--- a/PInvoke/VssApi/packages.config
+++ b/PInvoke/VssApi/packages.config
@@ -3,6 +3,6 @@
   <package id="Microsoft.Build.Tasks.Git" version="8.0.0" targetFramework="native" developmentDependency="true" />
   <package id="Microsoft.SourceLink.Common" version="8.0.0" targetFramework="native" developmentDependency="true" />
   <package id="Microsoft.SourceLink.GitHub" version="8.0.0" targetFramework="native" developmentDependency="true" />
-  <package id="Vanara.Core" version="4.0.0-beta" targetFramework="native" developmentDependency="true" />
-  <package id="Vanara.PInvoke.Shared" version="4.0.0-beta" targetFramework="native" developmentDependency="true" />
+  <package id="Vanara.Core" version="4.0.0-beta2" targetFramework="native" developmentDependency="true" />
+  <package id="Vanara.PInvoke.Shared" version="4.0.0-beta2" targetFramework="native" developmentDependency="true" />
 </packages>
