--- a/PInvoke/VssApi/Vanara.PInvoke.VssApi.nuspec
+++ b/PInvoke/VssApi/Vanara.PInvoke.VssApi.nuspec
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Vanara.PInvoke.VssApi</id>
@@ -15,50 +15,48 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <language>en-US</language>
     <dependencies>
-      <group targetFramework="net45">
+      <!--<group targetFramework="net45">
         <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net48">
         <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
-      </group>
+      </group>-->
       <group targetFramework="net6.0">
         <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
       </group>
-      <group targetFramework="net7.0">
+      <!--<group targetFramework="net7.0">
         <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="netcoreapp3.1">
         <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
-      </group>
+      </group>-->
     </dependencies>
     <releaseNotes></releaseNotes>
+    <suppportedDlls>vssapi.dll</suppportedDlls>
   </metadata>
   <files>
-    <file src="bin\Release\net45\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net45" />
+    <!--<file src="bin\Release\net45\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net45" />
     <file src="bin\Release\net45\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\net45" />
     <file src="bin\Release\net45\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\net45" />
 
     <file src="bin\Release\net48\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net48" />
     <file src="bin\Release\net48\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\net48" />
-    <file src="bin\Release\net48\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\net48" />
-
-    <file src="bin\Release\net6.0\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net6.0" />
-    <file src="bin\Release\net6.0\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\net6.0" />
+    <file src="bin\Release\net48\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\net48" />-->
+    <file src="bin\Release\net6.0\x64\Vanara.PInvoke.VssApi*.???" target="lib\net6.0" />
+    <!--<file src="bin\Release\net6.0\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\net6.0" />-->
     <file src="bin\Release\net6.0\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\net6.0" />
-
-    <file src="bin\Release\net7.0\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net7.0" />
+    <!--<file src="bin\Release\net7.0\Win32\Vanara.PInvoke.VssApi*.???" target="lib\net7.0" />
     <file src="bin\Release\net7.0\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\net7.0" />
     <file src="bin\Release\net7.0\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\net7.0" />
 
     <file src="bin\Release\netcoreapp3.1\Win32\Vanara.PInvoke.VssApi*.???" target="lib\netcoreapp3.1" />
     <file src="bin\Release\netcoreapp3.1\Win32\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x86\lib\netcoreapp3.1" />
-    <file src="bin\Release\netcoreapp3.1\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\netcoreapp3.1" />
-
+    <file src="bin\Release\netcoreapp3.1\x64\Vanara.PInvoke.VssApi*.???" target="runtimes\win10-x64\lib\netcoreapp3.1" />-->
     <file src="..\..\docs\icons\Vanara64x64.png" target="Vanara64x64.png" />
     <file src="pkgreadme.md" target="pkgreadme.md" />
   </files>
