--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Vanara.Library</id>
     <title>Vanara Libraries Metapackage</title>
-    <version>4.0.0</version>
+    <version>4.0.0-beta2</version>
     <description>The full set of packages associated with the Vanara PInvoke Libraries.</description>
     <tags>pinvoke;vanara;net-extensions;interop</tags>
     <copyright>Copyright © 2017-2022</copyright>
@@ -16,114 +16,114 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <language>en-US</language>
     <dependencies>
-      <dependency id="Vanara.BITS" version="4.0.0" />
-      <dependency id="Vanara.Core" version="4.0.0" />
-      <dependency id="Vanara.Management" version="4.0.0" />
-      <dependency id="Vanara.Net" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Accessibility" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.AclUI" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.AMSI" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Avrt" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.BITS" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Cabinet" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.CfgMgr32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.CimFs" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.CldApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.ClfsW32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.ComCtl32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.ComDlg32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.CoreAudio" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.CredUI" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Cryptography" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.DavClnt" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.DbgHelp" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Dhcp" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.DnsApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.DOSvc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Drt" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.DwmApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.EnhancedStorage" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.FhSvcCtl" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.FirewallApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.FunDisc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.FwpUClnt" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Gdi32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Graphics" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.HttpApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.IMAPI" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Imm32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.IpHlpApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.IScsiDsc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Kernel32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.KtmW32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Lz32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Magnification" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Mpr" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.MsftEdit" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Msi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.MsRdc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Multimedia" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NdfApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NetApi32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NetListMgr" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NewDev" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NtDll" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.NTDSApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Ole" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.OleDlg" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Opc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.P2P" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Pdh" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.PeerDist" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.PhotoAcquire" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.PortableDeviceApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.PowrProf" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Printing" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.ProjectedFSLib" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.QoS" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Rpc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.RstrtMgr" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.SearchApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Security" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.SensorsApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.SetupAPI" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Shared" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.SHCore" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Shell32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.ShlwApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.TaskSchd" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.TextServicesFramework" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.UIAutomation" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.UrlMon" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.User32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.UserEnv" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Usp10" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.UxTheme" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Version" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.VirtDisk" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WcmApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WcnApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WebSocket" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Wer" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WinBio" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WinHTTP" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WinINet" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WinSCard" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WinTrust" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WlanApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.Ws2_32" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WscApi" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WsmSvc" version="4.0.0" />
-      <dependency id="Vanara.PInvoke.WTSApi32" version="4.0.0" />
-      <dependency id="Vanara.Security" version="4.0.0" />
-      <dependency id="Vanara.SystemServices" version="4.0.0" />
-      <dependency id="Vanara.VirtualDisk" version="4.0.0" />
-      <dependency id="Vanara.Windows.Extensions" version="4.0.0" />
-      <dependency id="Vanara.Windows.Forms" version="4.0.0" />
-      <dependency id="Vanara.Windows.Shell.Common" version="4.0.0" />
-      <dependency id="Vanara.Windows.Shell" version="4.0.0" />
-      <dependency id="Vanara.WinUI.Extensions" version="4.0.0" />
-      <dependency id="Vanara.WPF.Extensions" version="4.0.0" />
+      <dependency id="Vanara.BITS" version="4.0.0-beta2" />
+      <dependency id="Vanara.Core" version="4.0.0-beta2" />
+      <dependency id="Vanara.Management" version="4.0.0-beta2" />
+      <dependency id="Vanara.Net" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Accessibility" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.AclUI" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.AMSI" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Avrt" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.BITS" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Cabinet" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.CfgMgr32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.CimFs" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.CldApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.ClfsW32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.ComCtl32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.ComDlg32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.CoreAudio" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.CredUI" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Cryptography" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.DavClnt" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.DbgHelp" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Dhcp" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.DnsApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.DOSvc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Drt" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.DwmApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.EnhancedStorage" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.FhSvcCtl" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.FirewallApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.FunDisc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.FwpUClnt" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Gdi32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Graphics" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.HttpApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.IMAPI" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Imm32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.IpHlpApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.IScsiDsc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Kernel32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.KtmW32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Lz32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Magnification" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Mpr" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.MsftEdit" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Msi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.MsRdc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Multimedia" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NdfApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NetApi32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NetListMgr" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NewDev" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NtDll" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.NTDSApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Ole" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.OleDlg" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Opc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.P2P" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Pdh" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.PeerDist" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.PhotoAcquire" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.PortableDeviceApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.PowrProf" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Printing" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.ProjectedFSLib" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.QoS" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Rpc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.RstrtMgr" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.SearchApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Security" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.SensorsApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.SetupAPI" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Shared" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.SHCore" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Shell32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.ShlwApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.TaskSchd" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.TextServicesFramework" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.UIAutomation" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.UrlMon" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.User32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.UserEnv" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Usp10" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.UxTheme" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Version" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.VirtDisk" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WcmApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WcnApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WebSocket" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Wer" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WinBio" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WinHTTP" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WinINet" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WinSCard" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WinTrust" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WlanApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.Ws2_32" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WscApi" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WsmSvc" version="4.0.0-beta2" />
+      <dependency id="Vanara.PInvoke.WTSApi32" version="4.0.0-beta2" />
+      <dependency id="Vanara.Security" version="4.0.0-beta2" />
+      <dependency id="Vanara.SystemServices" version="4.0.0-beta2" />
+      <dependency id="Vanara.VirtualDisk" version="4.0.0-beta2" />
+      <dependency id="Vanara.Windows.Extensions" version="4.0.0-beta2" />
+      <dependency id="Vanara.Windows.Forms" version="4.0.0-beta2" />
+      <dependency id="Vanara.Windows.Shell.Common" version="4.0.0-beta2" />
+      <dependency id="Vanara.Windows.Shell" version="4.0.0-beta2" />
+      <dependency id="Vanara.WinUI.Extensions" version="4.0.0-beta2" />
+      <dependency id="Vanara.WPF.Extensions" version="4.0.0-beta2" />
     </dependencies>
   </metadata>
   <files />
